04/pod.yaml
apiVersion: v1
kind: Pod
metadata:
 name: site-app
 labels:
  app: site-app
spec:
 containers:
 - name: site-app
   image: site:v1.4
   ports:
   - containerPort: 80
