04/php_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: php-service
spec:
  selector:
    app: php-app
  ports:
  - protocol: TCP
    port: 9000
  type: NodePort
